[package]
name = "apriltag"
version = "0.4.0"
authors = ["jerry73204 <jerry73204@gmail.com>", "frc4533-lincoln <lincoln@waterga.me>"]
edition = "2024"
description = "High level Rust bindings to AprilTag library"
categories = ["computer-vision"]
documentation = "https://docs.rs/apriltag/"
repository = "https://github.com/chalkydri/apriltag-rust.git"
homepage = "https://github.com/chalkydri/apriltag-rust"
readme = "README.md"
license = "BSD-2-Clause"

[dependencies]
apriltag-sys = { version = "*", path = "apriltag-sys" }
libc = "0.2.171"
measurements = "0.11.0"
noisy_float = "0.2.0"

[dev-dependencies]
clap = { version = "4.5.32", features = ["derive"] }

[features]
buildtime-bindgen = ["apriltag-sys/buildtime-bindgen"]

[workspace]
members = ["apriltag-sys"]
